# infra-did-rust

./: Cargo.toml  Makefile  README.md  a.json
.github/workflows/: cargo.yaml
src/: error.rs  lib.rs  sr25519.rs
src/crypto/: ed25519.rs  keytype.rs  mod.rs  sr25519.rs
src/did/: mod.rs
src/resolver/: resolver.rs
src/verifiable/credential/: contexts.rs  credential.rs  credential_subject.rs  errors.rs  issuer.rs  mod.rs  object_with_id.rs  proof.rs  schema.rs  string_or_uri.rs  vc_date_time.rs
src/verifiable/presentation/: credential_or_jwt.rs  holder.rs  mod.rs  presentation.rs
tests/: did-example-foo.json  did-infra-space.json
