[package]
name = "example-rs"
version = "0.1.0"
authors = ["Brick Pop <itsbrickpop@gmail.com>"]
edition = "2018"

[lib]
name = "example"
crate-type = ["staticlib", "cdylib"]

[dependencies]
hex = "0.4.3"
schnorrkel = "0.9.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
substrate-bip39 = "0.4.4"
tiny-bip39 = { version = "1.0.0", default-features = false }
base58 = "0.1.0"
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
lazy_static = "1.3.0"
regex = "1.2.1"
blake2-rfc = "0.2.18"
rustc-hex = "2.0.1"
ed25519-dalek = "1.0.1"
bs58 = "0.4.0"
