[package]
name = "infra-did"
version = "0.1.0"
authors = ["InfraBlockchain"]
edition = "2021"

[dependencies]
hex = "0.4.3"
schnorrkel = "0.9.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
substrate-bip39 = "0.4.4"
tiny-bip39 = { version = "1.0.0", default-features = false }
base58 = "0.1.0"
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
lazy_static = "1.3.0"
regex = "1.2.1"
blake2-rfc = "0.2.18"
rustc-hex = "2.0.1"
ed25519-dalek = "1.0.1"
bs58 = "0.4.0"
rand = "0.7.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0.40"
iref = { version = "2.2.2", features = ["serde"] }
static-iref = "2.0.0"
multibase = "0.9.1"
